--- a/韩式凉拌面.md
+++ b/韩式凉拌面.md
@@ -2,6 +2,6 @@
 
 2. 配菜：黄瓜切丝，火腿切丝，韩国泡菜切丝，鸡蛋摊皮切丝，木耳切丝，绿豆芽戳水（任意搭配）；
 
-3. 拌酱： 一勺韩式辣酱，两瓣蒜切末，两勺生抽， 两勺雪碧（或1/3勺小苏打加一勺水），一勺香油， 半勺白糖， 半勺白芝麻；
+3. 拌酱： 一勺韩式辣酱，两瓣蒜切，一勺味极鲜酱油，两勺雪碧（或1/3勺小苏打加一勺水），一勺香油（或半勺香油加半勺螺狮粉辣油），半勺白糖，半勺白芝麻；
 
 4. 面和酱拌匀，摆上蔬菜、煎蛋。
