--- a/麻婆豆腐.md
+++ b/麻婆豆腐.md
@@ -22,6 +22,6 @@
 
 9. 调淀粉水用来勾芡。分三次勾芡，每放一次淀粉水均需搅拌，根据汤汁和个人口味第三次勾芡可选。
 
-10. 关火以后加青蒜，利用锅内热量把青蒜断生。然后把剩下的花椒面撒入。
+10. 关火以后加青蒜，利用锅内热量把青蒜断生。出锅装盘以后把剩下的花椒面撒入。
 
 *注意*：豆腐下锅以后为了防止翻炒把豆腐破坏形制，用炒勺背面推和拉的动作替代翻炒。
