--- a/鸡腿排（空气炸锅）.md
+++ b/鸡腿排（空气炸锅）.md
@@ -1,4 +1,4 @@
-# 鸡腿排
+# 鸡腿排（空气炸锅）
 
 ## 食材
 鸡腿，葱，姜，蒜，盐，糖，黑胡椒，蚝油，生抽，淀粉，鸡蛋，面包糠
@@ -11,7 +11,7 @@
 
 3. 取出腌制好的鸡腿，去掉黏在上边的葱花、姜丝和蒜片；
 
-4. 依次裹淀粉、蛋液和面包糠；
+4. 依次裹淀粉、蛋液和面包糠，用cooking spray两面喷油；
 
 5. 空气炸锅铺锡纸，400<sup>°</sup>F预热5分钟；
 
