增补一些咖喱鸡腿饭的步骤

--- a/咖喱鸡腿饭.md
+++ b/咖喱鸡腿饭.md
@@ -4,8 +4,8 @@
 
 ## 用料
 
-- 调料：盐，白胡椒粉，黑胡椒粉，油，咖喱块（1块）
-- 食材：鸡腿（1-2个），胡萝卜，土豆（半个），洋葱（1/4个），米饭
+- 调料：盐，白胡椒粉，黑胡椒粉，油，料酒，咖喱块（1块或半块适合一人份）
+- 食材：鸡腿（1-2个），胡萝卜，土豆（半个），洋葱（1/4个），西兰花、熟鸡蛋（可选），黑芝麻（可选），米饭
 
 ## 步骤
 
@@ -13,12 +13,14 @@
 
 2. 胡萝卜切块，土豆切滚刀块，洋葱切条；
 
-3. 锅内加油，洋葱爆香后加入鸡腿快，炒至大部分鸡肉变白；
+3. 锅内加油，小火爆香洋葱，见洋葱变透明后加入鸡腿快，中大火炒至大部分鸡肉变白，锅边料酒半勺继续炒鸡肉直到稍带金黄；
 
-4. 加入胡萝卜块，翻炒片刻后加入土豆块；
+4. 加入胡萝卜块，翻炒片刻等待胡萝卜稍软加入土豆块和西兰花；
 
 5. 翻炒片刻后加入开水，没过食材，焖煮至土豆可用筷子插穿（大概10分钟）；
 
-6. 加入咖喱块，快速拌匀收汁；
+6. 关火利用锅内余热加入咖喱块化开，或小火加速咖喱块融化过程；
 
-7. 搭配准备好的米饭食用。
+7. 咖喱块融化后，中大火快速拌匀并收汁到需要的黏稠度；
+
+8. 搭配准备好的米饭食用，米饭可以提前用小碗塑型倒扣在盘子上（可选）。米饭上可撒几粒黑芝麻（可选），煮熟的鸡蛋去壳切开放在成品上（可选）。
