--- a/黑椒牛柳.md
+++ b/黑椒牛柳.md
@@ -2,7 +2,7 @@
 
 Ref: https://www.youtube.com/watch?v=NvqFryC2Rws
 
-**西冷牛肉**或**牛肋眼肉**做此菜最佳，其中肋眼肉最嫩，西冷牛肉口感更有嚼劲，但炒时间过久容易老。
+**菲力牛肉**、**西冷牛肉**或**牛肋眼肉**做此菜最佳，其中菲力牛肉最纯正，肋眼肉最嫩，西冷牛肉口感更有嚼劲，但炒时间过久容易老。
 
 1. 牛肉擦干水分，切细条，浸泡冲洗去除血水，然后用厨房纸巾吸干水分。加黑胡椒、盐、一点点老抽、两勺橄榄油、两勺淀粉水，抓匀后腌制20分钟（腌制西冷牛肉还需要用半个蛋清）。
 
