--- a/竹笋炒肉.md
+++ b/竹笋炒肉.md
@@ -2,12 +2,12 @@
 
 ## 用料
 
-- 调料：料酒，蚝油，香油，淀粉，生姜，盐，白胡椒粉，小葱，蒜，小米椒，虾米
+- 调料：料酒，蚝油，生抽，老抽、淀粉，生姜，盐，白胡椒粉、蒜、干辣椒
 - 食材：里脊肉，竹笋
 
 ## 步骤
 
-1. 里脊肉切片，加白胡椒、料酒、盐、生抽、老抽（一点点）、淀粉，抓匀腌制20分钟；
+1. 里脊肉切片，加白胡椒、料酒、盐、生抽、蚝油、老抽（一点点）、淀粉，抓匀腌制20分钟；
 
 2. 竹笋焯水（已经焯过水的可以省略），切段；
 
