--- a/白菜肉丝年糕汤.md
+++ b/白菜肉丝年糕汤.md
@@ -1,11 +1,13 @@
 # 白菜肉丝年糕汤
 
-1. 200g大白菜切丝，2个香菇切片，150g年糕切片。
+1. 200g大白菜切丝，3个香菇切片，里脊肉切丝，150g年糕切片，姜切丝，葱切葱花（葱白葱绿分开），小米椒切圈；
 
-2. 腌料：2g盐+1勺生抽+1勺料酒+半勺淀粉+适量姜丝+适量葱花+少量白胡椒粉抓匀，腌100g猪肉丝，15分钟入味。
+2. 腌料：2g盐+1勺生抽+1勺料酒+半勺淀粉+适量姜丝+适量葱花+少量白胡椒粉抓匀，腌100g猪肉丝，15分钟入味；
 
-3. 锅中2勺植物油，油热后下腌好的肉丝迅速划开，炒至泛白，继续下白菜丝和香菇，炒软。
+3. 锅中2勺植物油(或一半植物油一半辣油)，热锅冷油，加姜丝、葱花、辣椒圈爆香；
 
-4. 加入500ml水没过食材，中火煮开后根据个人口味，加入适量盐和酱油调味，再次煮开后，加入年糕片再煮3分钟，用筷子戳一下确认年糕熟了就起锅。
+4. 下腌好的肉丝迅速划开，炒至泛白，继续下白菜丝和香菇，炒软，并加入过滤后的香菇水；
+
+5. 加入500ml水没过食材，中火煮开后根据个人口味，加入适量盐和酱油调味，再次煮开后，加入年糕片再煮3分钟，用筷子戳一下确认年糕熟了就起锅。
 
 （用料为1人份）
